--- a/src/assets/style/public.scss
+++ b/src/assets/style/public.scss
@@ -253,3 +253,8 @@ video::-webkit-media-controls {
 
 	border-left: 1px solid #ddd;
 }
+.weui-toast{
+	right: 0;
+	margin: auto!important;
+	width: 2rem !important;
+}
